tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_impl_stricter_than_trait_different_generics/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: impl has stricter requirements than trait
   ┌─ src/main.nr:8:12
   │
 8 │         fn foo_bad<U>() where T: Default2;
   │            ------- definition of `foo_bad` from trait
   ·
14 │         fn foo_bad<B>() where B: Default2 {}
   │                                  -------- impl has extra requirement `B: Default2`
   │

Aborting due to 1 previous error
